metarialized comment section included